# language-core

./: .gitignore  .tm_properties  Parallelizer.hs  README  Test.hs  language-core.cabal
Language/: Core.hs
Language/Core/: Parser.hs  Syntax.hs  Term.hs  Test.hs
Language/Core/Test/: Test.hs  TestParser.hs  TestSyntax.hs
doc/: Language-Core-Parser.html  Language-Core-Term.html  Language-Core.html  doc-index.html  index-frames.html  index.html  mini_Language-Core-Parser.html  mini_Language-Core-Term.html  mini_Language-Core.html
