Name:         core-language
Version:      0.1
Description:  Core Language Parser and Pretty Printer
Author:       Michael Dever
Maintainer:   mdever@computing.dcu.ie
Build-Type:   Simple
Cabal-Version: >= 1.14

Library
  Build-Depends:    base >= 4 && < 5, split >= 0.2, haskell-src >= 1.0, pretty >= 1.1.1
  Exposed-modules:  Language.Core
  Other-modules: Language.Core.Parser, Language.Core.Syntax
  ghc-options:      -Wall
  default-language: Haskell2010