Name:         core-language
Version:      0.4
Description:  Core Language Parser and Pretty Printer
Author:       Michael Dever
Maintainer:   mdever@computing.dcu.ie
Build-Type:   Simple
Cabal-Version: >= 1.14

Library
  Build-Depends:    base >= 4 && < 5, split >= 0.2, pretty >= 1.1.1, haskell-src-exts >= 1.13.5
  Exposed-modules:  Language.Core, Language.Core.Parser, Language.Core.Syntax
  ghc-options:      -Wall
  default-language: Haskell2010
