name:                language-core
version:             0.1
synopsis:            A simple Haskell Parser
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Michael Dever
maintainer:          michael.dever2@mail.dcu.ie
-- copyright:           
category:            Haskell
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.14

Library
  Build-Depends:    base >= 4 && < 5, split >= 0.2, pretty >= 1.1.1, haskell-src-exts == 1.15.0
  Exposed-modules:  Language.Core, Language.Core.Parser, Language.Core.Syntax
  ghc-options:      -Wall
  default-language: Haskell2010
